--- a/index.html
+++ b/index.html
@@ -32,6 +32,44 @@
   </div>
 
 
+  <div class="page_2_mobile">
+    <div class="mobile2_headbox">
+        <p id="mobile2_header">Artists</p>
+    </div>
+    <div class="mobile2_publicholder">
+      <div class="mobile2_hld1">
+        <a id="mobile2_art1" href="#">Taylor Swift</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Juice WRLD</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Kendrick Lamar</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Katy Perry</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Post Malone</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Drake</a>
+      </div>
+
+      <div class="mobile2_hld2">
+        <a id="mobile2_art1" href="#">Avril Lavigne</a>
+      </div>
+    </div>
+
+    <div class="mobile2_button">
+      <a id="mobile2_more" href="#">Discover</a>
+    </div>
+  </div>
 
   <div class="page_2">
       <div class="artist_1">
